--- a/simulator.ini
+++ b/simulator.ini
@@ -26,3 +26,10 @@ bounce = 0.5
 bounce_vel = 0.1
 soft_cfm = 0.0001
 mu = 5.0
+
+[step]
+step_size = 0.01
+simulation_steps_per_frame = 4
+
+[world]
+gravity_z = -9.81
