add joystick params to ini file

--- a/simulator.ini
+++ b/simulator.ini
@@ -34,3 +34,7 @@ simulation_steps_per_frame = 4
 [world]
 gravity_z = -9.81
 max_track_speed = 50
+
+[joystick]
+enabled = 1
+device = /dev/input/by-id/usb-Logitech_Logitech_Cordless_RumblePad_2-event-joystick
