add annotation that mu and mu2 are reversed for grouser-terrain interaction

--- a/simulator.ini
+++ b/simulator.ini
@@ -10,7 +10,9 @@ max_contacts = 4
 bounce = 0.5
 bounce_vel = 0.1
 soft_cfm = 0.0001
-mu = 2.0
+; secondary direction:
+mu = 0.04
+; principal motion direction:
 mu2 = 0.5
 
 [contact_grouser_guide]
