use joystick device specified in config

--- a/simulator.ini
+++ b/simulator.ini
@@ -40,4 +40,4 @@ track_acceleration = 200
 
 [joystick]
 enabled = 1
-device = /dev/input/by-id/usb-Logitech_Logitech_Cordless_RumblePad_2-event-joystick
+device = 0
