change contacts debugging params

--- a/simulator.ini
+++ b/simulator.ini
@@ -4,6 +4,7 @@ bounce = 0.5
 bounce_vel = 0.1
 soft_cfm = 0.0001
 mu = infinity
+debug = false
 
 [contact_grouser_terrain]
 max_contacts = 4
@@ -14,6 +15,7 @@ soft_cfm = 0.0001
 mu = 0.04
 ; principal motion direction:
 mu2 = 0.5
+debug = true
 
 [contact_grouser_guide]
 max_contacts = 3
@@ -21,6 +23,7 @@ bounce = 0.5
 bounce_vel = 0.1
 soft_cfm = 0.0001
 mu = 0.0
+debug = false
 
 [contact_default]
 max_contacts = 6
@@ -28,7 +31,7 @@ bounce = 0.5
 bounce_vel = 0.1
 soft_cfm = 0.0001
 mu = 5.0
-debug = true
+debug = false
 
 [step]
 step_size = 0.01
