add DOE threading; change to tracked vehicle sim

--- a/simulator.ini
+++ b/simulator.ini
@@ -41,6 +41,7 @@ simulation_steps_per_frame = 4
 gravity_z = -9.81
 max_track_speed = 20
 track_acceleration = 200
+simulator_threads = 4
 
 [joystick]
 enabled = 1
