modified:   .cproject 	modified:   .project 	modified:   Makefile 	modified:   backflip.c 	modified:   flip.c 	modified:   main.c 	new file:   test.py 	modified:   track.c 	modified:   tracked_vehicle.c 	modified:   tracked_vehicle.h

--- a/.cproject
+++ b/.cproject
@@ -52,7 +52,11 @@
 		<project id="tvs.null.1906791938" name="tvs"/>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
-	<storageModule moduleId="refreshScope"/>
+	<storageModule moduleId="refreshScope" versionNumber="2">
+		<configuration configurationName="Default">
+			<resource resourceType="PROJECT" workspacePath="/tvs"/>
+		</configuration>
+	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 	<storageModule moduleId="scannerConfiguration">
 		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
@@ -63,4 +67,5 @@
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 </cproject>
