--- a/simulator.ini
+++ b/simulator.ini
@@ -4,7 +4,7 @@ bounce = 0.5
 bounce_vel = 0.1
 soft_cfm = 0.0001
 mu = infinity
-debug = false
+debug = true
 
 [contact_grouser_terrain]
 max_contacts = 4
@@ -23,7 +23,7 @@ bounce = 0.5
 bounce_vel = 0.1
 soft_cfm = 0.0001
 mu = 0.0
-debug = false
+debug = true
 
 [contact_default]
 max_contacts = 6
@@ -31,7 +31,7 @@ bounce = 0.5
 bounce_vel = 0.1
 soft_cfm = 0.0001
 mu = 5.0
-debug = false
+debug = true
 
 [step]
 step_size = 0.01
